# rules_tf

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod
tf/: BUILD.bazel  def.bzl  extensions.bzl  toolchains.bzl
tf/toolchains/: BUILD.bazel  tf_toolchain.bzl
tf/toolchains/terraform/: BUILD.bazel  toolchain.bzl
