filegroup(
    name = "standard_package",
    srcs = [
        "BUILD.bazel",
    ] + glob([
        "*.bzl",
        "*.tpl",
    ]),
    visibility = [
        "//distro:__pkg__",
        "//tf:__pkg__",
    ],
)

exports_files(
    glob([
        "*.bzl",
        "*.tpl",
    ]),
    visibility = [
        "//distro:__pkg__",
        "//tf:__pkg__",
    ],
)
